--- a/Argon/Views/Home/Categories.cshtml
+++ b/Argon/Views/Home/Categories.cshtml
@@ -2,9 +2,9 @@
 
     <div class="container-fluid py-4 ">
         <div class="row d-flex justify-content-center">
-            <div class="col-xl-12 col-sm-6 mb-xl-0 mb-4  d-flex align-content-center justify-content-around">
-                <div class="card col-3">
-                    <div class="card-body p-3">
+            <div class="col-xl-12 col-sm-6 mb-xl-0 mb-4 d-flex align-content-center justify-content-around">
+                <div class="card col-3 " >
+                    <div class="card-body p-3 ">
                         <div class="row">
                             <div class="col-8">
                                 <div class="numbers ">
@@ -16,8 +16,8 @@
                                 </div>
                             </div>
                             <div class="col-4 text-end">
-                                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
-                                    <i class="fa-solid fa-list"></i>
+                                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle" style="display:grid;place-items:center;color:white;">
+                                    AZ
                                 </div>
                             </div>
                         </div>
@@ -36,8 +36,8 @@
                                 </div>
                             </div>
                             <div class="col-4 text-end">
-                                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
-                                    <i class="fa-solid fa-list"></i>
+                                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle" style="display:grid;place-items:center;color:white;">
+                                    EN
                                 </div>
                             </div>
                         </div>
@@ -56,8 +56,8 @@
                                 </div>
                             </div>
                             <div class="col-4 text-end">
-                                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
-                                    <i class="fa-solid fa-list"></i>
+                                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle" style="display:grid;place-items:center;color:white;">
+                                    RU
                                 </div>
                             </div>
                         </div>
@@ -75,7 +75,7 @@
         <div class="row">
             @foreach (var category in (List<Argon.Models.CategoryNews>)ViewData["CategoryNewsList"])
             {
-                <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+                <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4 mt-3">
                     <div class="card">
                         <div class="card-body p-3">
                             <div class="row">
