--- a/Argon/Views/Shared/_Sidebar.cshtml
+++ b/Argon/Views/Shared/_Sidebar.cshtml
@@ -3,7 +3,7 @@
         <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
         <a class="navbar-brand m-0" href="/Home/Index" target="_blank">
             <img src="/img/logo-ct-dark.png" width="26px" height="26px" class="navbar-brand-img h-100" alt="main_logo">
-            <span class="ms-1 font-weight-bold">Creative Tim</span>
+            <span class="ms-1 font-weight-bold">Respublika</span>
         </a>
     </div>
     <hr class="horizontal dark mt-0">
@@ -14,7 +14,7 @@
                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-desktop" style="color:black;"></i>
                     </div>
-                    <span class="nav-link-text ms-1">Dashboard</span>
+                    <span class="nav-link-text ms-1">Əsas səhifə</span>
                 </a>
             </li>
             <li class="nav-item mt-3">
@@ -26,7 +26,7 @@
                         <i class="fa-solid fa-newspaper" style="color:black;"></i>
 
                     </div>
-                    <span class="nav-link-text ms-1">Xeberler</span>
+                    <span class="nav-link-text ms-1">Xəbərlər</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="/Home/GetPdf">
+                <a class="nav-link " href="/Home/NewsPaper">
                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-file-pdf" style="color:black;"></i>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-regular fa-user" style="color:black;"></i>
                     </div>
-                    <span class="nav-link-text ms-1">Profile</span>
+                    <span class="nav-link-text ms-1">Profil</span>
                 </a>
             </li>
             <li class="nav-item">
